[gd_scene load_steps=3 format=2]

[ext_resource path="res://Mods/std-cards-set-01/pics/st-00001.png" type="Texture" id=1]
[ext_resource path="res://assets/Screen/Deck/CardInDeckBtn.gd" type="Script" id=2]

[node name="CardInDeckBtn" type="Button"]
margin_right = 51.0
margin_bottom = 70.0
rect_min_size = Vector2( 51, 70 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 51.2
margin_bottom = 70.4
rect_min_size = Vector2( 51.2, 70.4 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_CardInDeckBtn_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_CardInDeckBtn_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CardInDeckBtn_mouse_exited"]
